k8s/vault-install.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  namespace: default
  labels:
    app.kubernetes.io/name: vault
spec:
  serviceName: vault
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vault
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vault
    spec:
      serviceAccountName: vault
      containers:
      - name: vault
        image: hashicorp/vault:1.18.0
        command:
        - vault
        - server
        - -dev
        - -dev-root-token-id=root
        - -dev-listen-address=0.0.0.0:8200
        ports:
        - containerPort: 8200
          name: http
        - containerPort: 8201
          name: cluster
        securityContext:
          capabilities:
            add:
            - IPC_LOCK
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: default
  labels:
    app.kubernetes.io/name: vault
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8200
    targetPort: 8200
  - name: cluster
    port: 8201
    targetPort: 8201
  selector:
    app.kubernetes.io/name: vault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-agent-injector
  namespace: default
  labels:
    app.kubernetes.io/name: vault-agent-injector
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vault-agent-injector
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vault-agent-injector
    spec:
      serviceAccountName: vault-agent-injector
      containers:
      - name: sidecar-injector
        image: hashicorp/vault-k8s:1.4.1
        imagePullPolicy: IfNotPresent
        args:
        - agent-inject
        - 2>&1
        ports:
        - containerPort: 8080
          name: https
---
apiVersion: v1
kind: Service
metadata:
  name: vault-agent-injector-svc
  namespace: default
  labels:
    app.kubernetes.io/name: vault-agent-injector
spec:
  ports:
  - name: https
    port: 443
    targetPort: 8080
  selector:
    app.kubernetes.io/name: vault-agent-injector
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: vault-agent-injector-cfg
webhooks:
- name: vault.hashicorp.com
  sideEffects: None
  admissionReviewVersions: ["v1", "v1beta1"]
  clientConfig:
    service:
      name: vault-agent-injector-svc
      namespace: default
      path: "/mutate"
    caBundle: ""
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  failurePolicy: Ignore
